--- a/probability/binom_distribution.Rmd
+++ b/probability/binom_distribution.Rmd
@@ -74,3 +74,21 @@ plot(quantiles,
      lwd=1)
 ```
 
+
+In a large population of adults, 70% have received CPR training. If 40 adults from this population are selected randomly, what is the probability that the 30 adults out of 40 have received the CPR training?
+
+```{r}
+p = 0.7
+n = 40
+k = 30
+```
+
+\[
+P[X=k] = {n \choose k} p^k (1-p)^{(n-k)}
+\]
+\[ 
+P[X=30] = {40 \choose 30} * 0.7^{30}* 0.3^{10}\\
+= 0.1128173
+\]
+
+
