--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "index"
+title: "MATH WORLD"
 author: "Ajay Karthick"
 date: "`r Sys.Date()`"
 output: html_document
@@ -9,5 +9,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+### PROBABILITY DISTRIBUTIONS
+
 [Bernoulli Distribution](probability/bernoulli-distribution.html)\
-[Binomial Distribution](probability/binom_distribution.html)
+[Binomial Distribution](probability/binom_distribution.html)\
+[Geometric Distribution](probability/geometric-distribution.html)\
