--- a/index.Rmd
+++ b/index.Rmd
@@ -16,4 +16,5 @@ knitr::opts_chunk$set(echo = TRUE)
 [Bernoulli Distribution](probability/bernoulli-distribution.html)\
 [Binomial Distribution](probability/binom_distribution.html)\
 [Geometric Distribution](probability/geometric-distribution.html)\
+[Negative Binomial Distribution](probability/neg-binomial-distribution.html)\
 [Poisson Distribution](probability/poisson-distribution.html)\
